Add observation limits and enhanced rejection tracking
- Introduced per-file and per-concept observation limits to prevent OOM.
- Added logging and JSONL reports for rejected observations and limits.
- Updated ingestion threading to use bounded concurrency for stability.
- Enhanced logging and configuration for observability and flexibility.